finished cards for settings page, have to fix bug on mobile views

--- a/src/components/LoginForm/login-form.css
+++ b/src/components/LoginForm/login-form.css
@@ -16,16 +16,20 @@
   font-family: 'Lora', serif;
   font-weight: bolder;
   font-size: 20px;
+  display: none;
 }
 
 .signup-form input {
-  font-size: 20px;
+  font-size: 16px;
   border: 1px solid #2E1F27;
   border-radius: 4px;
-  margin: 10px auto;
-  padding: 3px 5px;
-  width: 50%;
-  max-width: 250px;
+  margin: 0px auto;
+  padding: 10px 60px 10px 10px;
+}
+
+.solid-orange-btn {
+  margin-top: 25px;
+  padding: 12px 60px;
 }
 
 .redirect-user {
