--- a/src/components/UserInfo/UserInfo.css
+++ b/src/components/UserInfo/UserInfo.css
@@ -14,11 +14,12 @@
 
 .user_data button {
   font-family: 'Lora', serif;
-  margin: 5px;
+  margin: 15px;
   color: #E7E393;
   background-color: #DD7230;
   border: 1px solid #2E1F27;
   border-radius: 4px;
+  padding: 8px 40px;
 }
 
 .user_data button:hover {
@@ -28,4 +29,16 @@
   border: 1px solid #2E1F27;
   border-radius: 4px;
   transition: 0.3s;
+}
+
+@media screen and (min-width: 750px) {
+  .user_data button {
+    font-family: 'Lora', serif;
+    margin: 15px;
+    color: #E7E393;
+    background-color: #DD7230;
+    border: 1px solid #2E1F27;
+    border-radius: 4px;
+    padding: 8px 40px;
+  }
 }
