--- a/src/routes/AdminDashboardPage/AdminDashboardPage.css
+++ b/src/routes/AdminDashboardPage/AdminDashboardPage.css
@@ -1,10 +1,10 @@
-.messages-container {
+.admin-messages-container {
     padding-top: 170px;
 
 }
 
 @media only screen and (min-width: 600px) {
-    .messages-container {
+    .admin-messages-container {
         margin-top: 2rem;
     }
 }
